--- a/index/styles/style.css
+++ b/index/styles/style.css
@@ -1,7 +1,7 @@
 body
 {
 
-    background-color: rgba(194, 242, 248, 0.671);
+    background-color: rgba(98, 171, 240, 0.863);
 
 }
 
@@ -16,7 +16,7 @@ header
 nav
 {
 
-    background-color:rgba(211, 211, 211, 0.534);
+    background-color:rgba(180, 180, 180, 0.534);
     margin-bottom: 0.8%; 
     height: 4.5vh;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.075);      
@@ -34,6 +34,13 @@ main
     border-radius: 2%;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.219);
     
+}
+
+img#span
+{
+
+    
+
 }
 
 img#flags
@@ -55,6 +62,7 @@ table
 
 }
 
+
 td, th
 {
 
@@ -70,14 +78,14 @@ h1.header
 {
     font-size: 1.8rem;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: rgba(85, 85, 85, 0.918);
+    color: rgba(255, 255, 255, 0.918);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.253);
 }
 
 a 
 {
 
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.829);
     text-decoration: none;
     margin: 1%;
     font-weight: bolder;
@@ -89,7 +97,7 @@ a
 a.footer
 {
     
-    color: blue;
+    color: rgb(255, 255, 255);
     margin: 0.3%;
 }
 
