--- a/index/artcile.css
+++ b/index/artcile.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
+
 body
 {
 
@@ -9,8 +11,8 @@ body
 header
 {
 
-    background-color: rgba(255, 255, 255, 0.938);
-    width: 25%;
+    background-color: rgba(116, 116, 116, 0.63);
+    width: 15%;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.123);
     margin: auto;
     border-radius: 5%;
@@ -23,7 +25,7 @@ main
 
     width: 45%;
     height: 80vh;
-    background-color: rgba(255, 255, 255, 0.938);
+    background-color: rgba(255, 255, 255, 0.849);
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.123);
     margin: auto;
 
@@ -54,6 +56,9 @@ h1.header
 
     text-align: center;
     text-decoration: underline red;
+    color: rgba(184, 230, 172, 0.705);
+    font-family: 'Monoton', cursive;
+    
 
 }
 
