--- a/index/styles/gpd.css
+++ b/index/styles/gpd.css
@@ -20,7 +20,7 @@ nav
 
     background-color: rgba(122, 231, 186, 0.747);
     height: 40px;
-    width: 40%;
+    width: 15%;
     margin-left: 15%;
     margin-top: -1%;
 
@@ -46,6 +46,28 @@ h1.header
 
 }
 
+h1.main
+{
+
+    text-align: center;
+    padding-top: 1%;    
+
+}
+
+p
+{
+
+    text-align: justify;
+    text-align: start;
+    text-indent: 1%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 1%;
+
+}
+
 a.footer
 {
     
@@ -56,6 +78,7 @@ a.footer
 p.footer
 {
     text-align: center;
+    font-weight: bolder;
 }
 
 a:hover
